<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".QuizActivity">







         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/noQuestion"
             android:textColor="#000"
             android:textSize="12sp"
             android:layout_margin="10dp"
             android:text="@string/question_no_1"/>





        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_light"
            android:gravity="center_horizontal"
            android:text="@string/Is_Africa_a_country"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/write_your_answer"
            android:inputType="text" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/question_no_2"
            android:textColor="#000"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_light"
            android:gravity="center_horizontal"
            android:text="@string/what_are_the_three_major_languages_in_nigeria"
            android:textColor="#000"
            android:textSize="20sp" />


        <CheckBox
            android:id="@+id/hausa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="a.) hausa"
            android:layout_margin="10dp"/>

        <CheckBox
            android:id="@+id/igbo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="b.) igbo"
            android:layout_margin="10dp"/>

        <CheckBox
            android:id="@+id/yoruba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="c.) yoruba"
            android:layout_margin="10dp"/>

        <CheckBox
            android:id="@+id/french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="d.) french"
            android:layout_margin="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#000"
            android:textSize="12sp"
            android:text="@string/question_no_3"/>


        <TextView
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_light"
            android:gravity="center_horizontal"
            android:text="@string/which_of_the_following_animals_barks"
            android:textColor="#000"
            android:textSize="20sp" />


        <RadioGroup
            android:id="@+id/radio_group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >


        <RadioButton
            android:id="@+id/cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="a.) cat"
            android:layout_margin="10dp"/>

        <RadioButton
            android:id="@+id/goat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="b.) goat"
            android:layout_margin="10dp"/>

        <RadioButton
            android:id="@+id/lion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="c.) lion"
            android:layout_margin="10dp"/>

        <RadioButton
            android:id="@+id/dog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="d.) dog"
            android:layout_margin="10dp"/>
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#000"
            android:textSize="12sp"
            android:text="@string/question_no_4" />



        <TextView
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_light"
            android:gravity="center_horizontal"
            android:text="@string/solve_the_expression_10_10"
            android:textColor="#000"
            android:textSize="20sp" />


        <RadioGroup
            android:id="@+id/radio_group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >


            <RadioButton
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="a.) 200"
                android:layout_margin="10dp"/>

            <RadioButton
                android:id="@+id/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="b.) 111"
                android:layout_margin="10dp"/>

            <RadioButton
                android:id="@+id/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="c.) 100"
                android:layout_margin="10dp"/>

            <RadioButton
                android:id="@+id/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="d.) 101"
                android:layout_margin="10dp"/>
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="10dp"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#000"
            android:textSize="12sp"
            android:text="Question No: 5 " />



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/holo_blue_light"
            android:layout_gravity="center_horizontal">


            <TextView
                android:id="@+id/question5"
                android:layout_width="match_parent"
                android:text="@string/identify_the_following_images"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/option1"
                android:layout_width="wrap_content"
                android:text="a.)"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="#000"
                android:textSize="20sp"
                android:paddingTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />



            <ImageView
                android:id="@+id/bicycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bicycle"
                android:background="@android:color/holo_blue_light"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="30dp"
                android:scaleType="centerCrop"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp" />




            <TextView
                android:id="@+id/option2"
                android:layout_width="wrap_content"
                android:text="b.)"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="20sp"
                android:paddingTop="60dp"
                android:layout_marginRight="200dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="170dp" />


            <ImageView
                android:id="@+id/mercedes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mercedes"
                android:background="@android:color/holo_blue_light"
                android:layout_marginTop="60dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:scaleType="centerCrop"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/option3"
                android:layout_width="wrap_content"
                android:text="c.)"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="#000"
                android:textSize="20sp"
                android:paddingTop="160dp"/>

            <ImageView
                android:id="@+id/football"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/footballl"
                android:background="@android:color/holo_blue_light"
                android:layout_marginTop="160dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:scaleType="centerCrop"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/option4"
                android:layout_width="wrap_content"
                android:text="d.)"
                android:layout_height="wrap_content"

                android:textColor="#000"
                android:textSize="20sp"
                android:paddingTop="160dp"
                android:layout_marginRight="200dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="170dp" />


            <ImageView
                android:id="@+id/basketball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/basketball"
                android:background="@android:color/holo_blue_light"
                android:layout_marginTop="160dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:scaleType="centerCrop"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true" />


        </RelativeLayout>


        <EditText
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="a.)"
            android:inputType="text" />

        <EditText
            android:id="@+id/answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="b.)"
            android:inputType="text" />

        <EditText
            android:id="@+id/answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="c.)"
            android:inputType="text" />

        <EditText
            android:id="@+id/answer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="d.)"
            android:inputType="text" />




    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#000"
        android:textSize="12sp"
        android:text="@string/question_no_6"/>


    <TextView
        android:id="@+id/question6"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:text="@string/who_is_the_current_president_of_nigeria"
        android:textColor="#000"
        android:textSize="20sp" />


    <RadioGroup
        android:id="@+id/radio_group3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >


        <RadioButton
            android:id="@+id/mgbemena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="a.) mgbemena anthony udoka"
            android:layout_margin="10dp"/>

        <RadioButton
            android:id="@+id/osinbajo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="b.) Osinbajo Yemi"
            android:layout_margin="10dp"/>

        <RadioButton
            android:id="@+id/goodluck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="c.) Ebele Goodluck Jonathan"
            android:layout_margin="10dp"/>

        <RadioButton
            android:id="@+id/buhari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="d.) Muhammadu Buhari"
            android:layout_margin="10dp"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#000"
        android:textSize="12sp"
        android:text="@string/question_no_7" />



    <TextView
        android:id="@+id/question7"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:text="@string/who_is_the_founder_of_windows_operating_system"
        android:textColor="#000"
        android:textSize="20sp" />


    <RadioGroup
        android:id="@+id/radio_group4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >


        <RadioButton
            android:id="@+id/bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="a.) Bill Gates"
            android:layout_margin="10dp"/>

        <RadioButton
            android:id="@+id/mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="b.) Mark Zuckerberg"
            android:layout_margin="10dp"/>

        <RadioButton
            android:id="@+id/warren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="c.) Warren Edward Buffett"
            android:layout_margin="10dp"/>

        <RadioButton
            android:id="@+id/fiftycent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="d.) FiftyCent Curtis Jackson"
            android:layout_margin="10dp"/>
    </RadioGroup>




    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="10dp"/>




    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/submit"
        android:textSize="18sp"
        android:background="@drawable/curvedbutton"
        android:layout_marginTop="80dp"
        android:onClick="grade"
        android:layout_gravity="center"/>

</LinearLayout>



</ScrollView>